# git.sr.ht

./: .build.yml  .gitignore  .gitmodules  Makefile  README  README.md  cloneperf  config.example.ini  config.ini.example  git-srht-dispatch  git-srht-keys  git-srht-migrate  git-srht-periodic  git-srht-shell  git-srht-update-hook  git.sr.ht-initdb  git.sr.ht-periodic  gitsrht-dispatch  gitsrht-initdb  gitsrht-keys  gitsrht-migrate  gitsrht-periodic  gitsrht-shell  gitsrht-update-hook  go.mod  go.sum  pyproject.toml  run.py  schema.sql  setup.py  static
.builds/: alpine.yml  archlinux.yml  debian.yml
_static/: linelight.js
api/: go.mod  go.sum  gqlgen.yml  server.go
api/account/: middleware.go
api/auth/: auth.go
api/clones/: middleware.go
api/crypto/: crypto.go
api/database/: filter.go  ql.go  sq.go
api/graph/: complexity.go  email.go  recover.go  resolver.go  schema.graphqls  schema.resolvers.go
api/loaders/: gen  generate.go  middleware.go  repositoriesbyidloader_gen.go  repositoriesbynameloader_gen.go  repositoriesbyownerreponameloader_gen.go  userloader_gen.go  usersbyidloader_gen.go  usersbynameloader_gen.go
api/repos/: middleware.go
api/search/: middleware.go  search.go
cmd/api/: main.go
contrib/: ensure-config  ensure-hooks  spdx-transform.py
dispatch/: main.go
git/: app.py  config.py  db.py  decorators.py  flask.py  validation.py
gitsrht/: access.py  annotations.py  app.py  decorators.py  default_query.graphql  editorconfig.py  errors.py  formatting.py  git.py  oauth.py  pygit2_backend.py  repos.py  rss.py  service.py  spdx.py  submit.py  urls.py  webhooks.py  worker.py
gitsrht-dispatch/: .gitignore  go.mod  main.go
gitsrht-keys/: .gitignore  go.mod  go.sum  main.go
gitsrht-shell/: .gitignore  go.mod  go.sum  main.go
gitsrht-update-hook/: .gitignore  go.mod  go.sum  main.go  manifest.go  options.go  post-update.go  pre-receive.go  receive.go  stage-3.go  submitter.go  types.go  update.go  webhooks.go
graphql/: go.mod  go.sum  gqlgen.yml  server.go
hooks/: update
http-clone/: main.go
keys/: main.go
migrations/: 0002_index_repository_path.sql  0003_add_more_indices.sql  0004_drop_legacy_webhooks.sql  0005_access_mode_enum.sql  0006_add_resource_ids.sql  0007_deploy_keys.sql  0008_add_repo_indexed.sql
scripts/: symlink-update-hook.py
scss/: cgit.scss  main.scss
shell/: main.go
templates/: cgit.html  git.html  layout.html  manage.html  not_found.html  oauth-error.html  user.html
update-hook/: main.go  manifest.go  options.go  post-update.go  receive.go  stage-3.go  submitter.go  types.go  update.go
(+144 files in other folders)
